# UiPath-Builder-Agent

./: .cursorrules  .env.example  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  QUICKSTART.md  README.md  input.txt  langgraph.json  pyproject.toml  run_evals.py
extensions/: README.md
extensions/skill-insights/: README.md
extensions/skills/: README.md
extensions/skills/mermaid-diagram-builder/: SKILL.md
extensions/skills/uipath-deployment-readiness/: SKILL.md
extensions/skills/uipath-planner/: SKILL.md
extensions/skills/uipath-servo/: SKILL.md
extensions/skills/uiplan/: SKILL.md
extensions/skills/writing-uipath-plans/: SKILL.md
extensions/uipath-rule-bundle/: CLAUDE.md  README.md
extensions/uipath-rule-bundle/docs/: uipath-cli.md  (+2 more)
ops/scripts/: build_uipath_rule_bundle.ps1  claude-quickstart.ps1  claude-quickstart.sh  cursor-quickstart.ps1  cursor-quickstart.sh  debug_skills.py  dryrun_invoice_demo.py  e2e_xaml_tool_smoke.py  emit_invoice_intake_xaml.py  generate_mcp_tools_doc.py  generate_plan_index.py  install_git_hooks.ps1  mcp_tools_doc_diagrams.py  publish-confluence.ps1  publish_confluence.py  record-demo.ps1  run_e2e_skill_tests.py  scaffold_invoice_demo.py  seed_uipath_docs.py  setup-cursor.ps1  setup-cursor.sh  smoke_chat_pipeline.py  test_chat.py  test_skills_integration.py  update-skills.ps1  update-skills.sh  validate_uipath_project.py  verify_invoice_intake_demo.ps1
templates/uiplan/: README.md  _diagram-patterns.md  _plan-template.md  _spec-template.md  _tasks-template.md  _workflow-catalog.md
(+7 files in other folders)
